- Issue #23731: Implement PEP 488: removal of .pyo files.

- Issue #22903: The fake test case created by unittest.loader when it fails
  importing a test module is now picklable.

- unittest2 issue #94: Dependency on six needs to be versioned.

- Issue #22936: Make it possible to show local variables in tracebacks for
  both the traceback module and unittest.

- Issue #22894: TestCase.subTest() would cause the test suite to be stopped
  when in failfast mode, even in the absence of failures.

- Issue #22457: Honour load_tests in the start_dir of discovery.

- Issue #7559: unittest test loading ImportErrors are reported as import errors
  with their import exception rather than as attribute errors after the import
  has already failed.

- Issue #19746: Make it possible to examine the errors from unittest
  discovery without executing the test suite. The new `errors` attribute
  on TestLoader exposes these non-fatal errors encountered during discovery.

- Issue #16662: load_tests() is now unconditionally run when it is present in
  a package's __init__.py.  TestLoader.loadTestsFromModule() still accepts
  use_load_tests, but it is deprecated and ignored.  A new keyword-only
  attribute `pattern` is added and documented.  Patch given by Robert Collins,
  tweaked by Barry Warsaw.

- Issue #22032: __qualname__ instead of __name__ is now always used to format
  fully qualified class names of Python implemented classes.

- Issue #9815: assertRaises now tries to clear references to local variables
  in the exception's traceback.

- Issue #20145: `assertRaisesRegex` and `assertWarnsRegex` now raise a
  TypeError if the second argument is not a string or compiled regex.

- Issue #20165: The unittest module no longer considers tests marked with
  @expectedFailure successful if they pass.

- Fix breakage in TestSuite.countTestCases() introduced by issue #11798.

- Issue #19880: Fix a reference leak in unittest.TestCase. Explicitly break